--- a/Bluetooth_faster_connection/AndroidManifest.xml
+++ b/Bluetooth_faster_connection/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_guidedog"
         android:label="@string/app_name"
         android:persistent="true"
         android:theme="@style/AppTheme" >
