--- a/Bluetooth_faster_connection/bin/AndroidManifest.xml
+++ b/Bluetooth_faster_connection/bin/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.bluetooth_faster_connection.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
