--- a/Bluetooth_faster_connection/bin/AndroidManifest.xml
+++ b/Bluetooth_faster_connection/bin/AndroidManifest.xml
@@ -16,12 +16,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_guidedog"
         android:label="@string/app_name"
         android:persistent="true"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.bluetooth_faster_connection.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
